# outlabs-taskq

./: .gitignore  AGENTS.md  README.md  TASKS.md  pyproject.toml
bench/: __init__.py  runner.py
docs/: README.md  Task Queue 0.1 Function Manifest.md  Task Queue 0.2 Native Orchestration Specification.md  Task Queue Authorization & Queue Permissions.md  Task Queue Build Plan.md  Task Queue Durable Admission Reservation Specification.md  Task Queue Gap Analysis.md  Task Queue Growth, Topology & Live Visibility.md  Task Queue Host Branch Reconciliation Specification.md  Task Queue Legacy Tools Path Retirement Specification.md  Task Queue Library Extraction Design Brief.md  Task Queue Peer Patterns Research.md  Task Queue Read Model Specification.md  Task Queue Stage 2A Typed Enqueue Specification.md  Task Queue Stage 2B Worker Runtime Specification.md  Task Queue Stage 2C Claim Loop and Worker CLI Specification.md  Task Queue Stage 2D Consumer Testing Specification.md  Task Queue Stage 3 FastAPI and Authorization Specification.md  Task Queue Stage 4 outlabsAPI Dogfood Specification.md  Task Queue Stage 5 QDarte Contact Verify C7 Environment Plan.md  Task Queue Stage 5 QDarte Contact Verify Compatibility Ledger.md  Task Queue Stage 5 QDarte Contact Verify Compatibility and Cutover Specification.md  Task Queue Stage 5 QDarte Contact Verify Consolidation Specification.md  Task Queue Stage 5 QDarte Contact Verify Direct Retirement Specification.md  Task Queue Stage 5 QDarte Contact Verify Implementation Specification.md  Task Queue Stage 5 QDarte Full Replacement Specification.md  Task Queue Stage 5 QDarte Native Registry and Effects Specification.md  Task Queue Stage 5 QDarte Pilot Specification.md  Task Queue Stage 5 Read Model Host Adoption Specification.md  Task Queue Staging Cutover Runbook.md  Task Queue Test & Benchmark Harness.md  Task Queue Transport Protocol v1.md  Task Queue — Unified Design Spec.md
scripts/: artifact_smoke.py
tests/: conftest.py  test_bench_smoke.py  test_plans.py  (+56 more)
(+152 files in other folders)
